# script-bucket-s3-backup

./: .gitignore  README.md  model.env  pyproject.toml
src/: downloadFiles.py  getFiles.py  main.py  settings.py
